# MemoQuizz

./: CMakeLists.txt  IntroTextFade.qml  IntroTextTypeWriter.qml  MemoQuizz.sln  MemoQuizz.vcxproj  MemoQuizz.vcxproj.filters  QuizPage.qml  QuizzPage.qml  README.md  helper.cpp  helper.h  main.cpp  main.qml  qml.qrc  question.cpp  question.h  questions.json  quizzmanager.cpp  quizzmanager.h
interfaces/: iloadable.h  iprocessable.h  istatusable.h
